fixed tests error compiling